[package]
name = "ctf_rss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "1.10.0"
reqwest = "0.11.11"
tokio = { version = "1", features = ["full"]}
structopt = { version = "0.3", default-features = false }
html2text = "0.4.2"
terminal_size = "0.2.1"

[lib]
name = "ctf_rss"
